--- a/products.html
+++ b/products.html
@@ -29,21 +29,21 @@
         </div>
     <div class="item-text">
       <h3>Triple-Blended Coffee Beans</h3>
-      <p> Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</p>
+      <div> Skillfully roasted and carefully blended, our Triple-Blended Coffee Beans don’t just wake you up in the morning, they pack a lasting punch that's sure to leave you wanting more. With silky smoothness and layered flavors, there’s really no better way to start your day.</div>
     </div>
     <div class="item-img">
       <img src="gulp-pouring-coffee-horizontal-sm.jpg" width="500" height="350">   
     </div>
     <div class="item-text">
       <h3>Lightly Roasted Coffee Beans</h3>
-      <p> Our Lightly Roasted Coffee Beans offer the world a chance to brighten every day with a whole lot of flavor and inspiration. Try these to receive the perfect balance between bold flavor and subtle sweetness.</p>
+      <div> Our Lightly Roasted Coffee Beans offer the world a chance to brighten every day with a whole lot of flavor and inspiration. Try these to receive the perfect balance between bold flavor and subtle sweetness.</div>
     </div>
     <div class="item-img">
       <img src="gulp-coffee-beans.jpg" width="500" height="350">
       </div>
       <div class="item-text">
       <h3>Columbian-Blended Espresso Beans</h3>
-      <p> With our Columbian-Blended Espresso Beans, you can finally feel like a professional barista. Bright and clean with an intense burst of flavor, these full-bodied beans strike a perfect balance between the most delicate roasts and fruitful aromas.</p>
+      <div> With our Columbian-Blended Espresso Beans, you can finally feel like a professional barista. Bright and clean with an intense burst of flavor, these full-bodied beans strike a perfect balance between the most delicate roasts and fruitful aromas.</div>
     </div>
     </section>
 </div>
